[project]
name = "ai-financial-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=12.27.0",
    "deepeval>=3.7.8",
    "langchain-ollama>=1.0.1",
    "openinference-instrumentation-langchain>=0.1.57",
    "pandas>=2.3.3",
    "streamlit>=1.52.2",
    "yfinance>=1.0",
]
